Release version 3.0.0: migrate to Java 25, enable `-XX:+UseCompactObjectHeaders` for memory efficiency, enhance native package builds, and update dependencies and tests.